--- a/SiteWithInfo/Views/Shared/_Layout.cshtml
+++ b/SiteWithInfo/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="All">Все пользователи</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
